--- a/style.css
+++ b/style.css
@@ -3,26 +3,31 @@
 
 
 body {
-	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "sans-serif";
-	background-color: #8E9F53
+    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "sans-serif";
+    background-color: #5Ff22f
 }
 
 h1 {
-	font-size: 38px
+    font-size: 38px
 }
 
-p{line-height: 1.5}
-
-header {background-color: aliceblue}
-
-article{background-color: #FFFFFF;
-		width: 900;
-		margin-left: auto;
-	margin-right: auto
+p {
+    line-height: 1.5
 }
 
-footer{
-	width: 900px;
-	margin-left: auto;
-	margin-right: auto
+header {
+    background-color: aliceblue
+}
+
+article {
+    background-color: #FFAFFF;
+    width: 900;
+    margin-left: auto;
+    margin-right: auto
+}
+
+footer {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto
 }
