--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "sans-serif";
-    background-color: #5ff22f
+    background-color: #5f522f
 }
 
 h1 {
