--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body {
     font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
     background-color: #edede3;
-    margin: 0;
+    background-image: url(back.png);
+    margin: 0
 }
 
 h1 {
@@ -34,11 +35,20 @@ header h1 {
     margin-right: auto
 }
 
-figure.photo-left {
-    margin: 0;
-    float: left;
-    margin-right: 20px;
+header h1 img {
+    vertical-align: -10px;
+    margin-right: 5px
 }
+
+header h1 a{
+    text-decoration: none;
+    color: #000000;
+}
+
+header h1 a:hover{
+    color: #000000;
+}
+
 
 
 /* 記事 */
@@ -56,7 +66,7 @@ article {
     -webkit-box-shadow: 1px 1px 3px #aaaaaa;
     box-shadow: 1px 1px 3px #aaaaaa;
     border-radius: 20px;
-    overflow: auto;
+    overflow: hidden
 }
 
 /* フッター */
@@ -64,5 +74,112 @@ footer {
     width: 900px;
     margin-left: auto;
     margin-right: auto;
-    clear: both;
+    clear: both
 }
+
+/* 画像を中央に配置するレイアウト */
+figure.photo-center {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* 画像を左に配置するレイアウト */
+figure.photo-left {
+    margin: 0;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    float: left
+}
+
+figure.photo-left img {
+    width: 550px
+}
+
+/* 画像を右に配置するレイアウト */
+figure.photo-right {
+    margin: 0;
+    margin-left: 20px;
+    float: right
+}
+
+figure.photo-right img {
+    width: 550px
+}
+
+/* 小見出し */
+h2 {
+    clear: both;
+    border-bottom: solid 5px #c39f4a;
+    margin-top: 30px
+}
+
+/* リンク */
+a {
+    color: #b77d3c
+}
+
+a:hover {
+    color: #ff8800
+}
+
+
+/* 関連記事へのリンク */
+aside {
+    border: solid 2px #d6c588;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #edede3;
+    margin-top: 40px
+}
+
+aside h1 {
+    font-family: 'Chango', cursive;
+    font-size: 18px;
+    color: #c39f4a;
+    border-bottom: dotted 1px #c39f4a
+}
+
+aside ul {
+    list-style-image: url(listmark.png)
+}
+
+aside a {
+    color: #000000;
+    text-decoration: none
+}
+
+nav ul {
+    list-style-type: none;
+    margin-top: 0;
+    margin-left: 0;
+    margin-bottom: 0;
+    font-size: 0;
+}
+
+nav li {
+    display: inline;
+    font-size: 12px;
+    border-right: solid 1px #aaaaaa;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+nav li:first-child {
+    border-left: solid 1px #aaaaaa;
+}
+
+nav {width: 900px;
+margin-left: auto;
+margin-right: auto;
+text-align: right;
+margin-top: -27px;
+margin-bottom: 10px;
+}
+
+nav a {
+    color: #000000;
+    text-decoration: none;
+}
+
+a:hover {color: chocolate;}
