--- a/レスポン/style.css
+++ b/レスポン/style.css
@@ -8,7 +8,7 @@
 
 img {
     width: 100%;
-    height: auto;
+
 }
 
 
@@ -24,6 +24,7 @@ body {
         [foot] 100px;
     grid-row-gap: 20px;
     row-gap: 20px;
+    font-family: sans-serif;
 }
 
 
@@ -36,13 +37,38 @@ body > * {
 /* ヘッダー */
 header {
     grid-row: head;
+    justify-self: center;
+    align-self: center;
+    font-size: 40px;
+    color: #555d6b
 }
 
 /* ナビゲーションメニュー */
 nav {
     grid-row: head;
+    justify-self:center;
+    align-self: end;
 }
 
+ul{
+    list-style-type: none;
+    padding: 0px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-column-gap: 20px;
+    column-gap: 20px;
+}
+
+a {
+    color: #666666;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+a:hover{
+    color: #EF9504;
+}
 
 /* ヒーローイメージ */
 figure {
@@ -50,6 +76,13 @@ figure {
     grid-row: title / span 2;
 }
 
+figure.hero img {
+    height: 547px;
+    object-fit: cover;
+    vertical-align: bottom;
+    z-index: -1;
+    position:relative;
+}
 
 /* タイトル */
 h1 {
