--- a/レスポン/style.css
+++ b/レスポン/style.css
@@ -87,22 +87,83 @@ figure.hero img {
 /* タイトル */
 h1 {
     grid-row: title;
+    color: #ffffff;
+    text-shadow: 0 0 5px #444444;
+    align-self: center;
 }
+
 
 /* サブタイトル */
 p {
     grid-row: sub;
+    text-align: center;
+}
+
+p a {
+    color: #ffffff;;
+    text-decoration: none;
+    border: solid 1px #ffffff;
+    padding: 10px 40px;
+    display: inline-block;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: rgba(85,93,107,0.5);
+}
+
+p a:hover{
+    background-color: #ef9504;
+    color: #ffffff;
+}
+
+p img {
+    width: 250px;
 }
 
 
 /* 記事一覧 */
 section {
     grid-row: recent;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px 10px;
+    gap: 20px 10px;
+}
+
+section a {
+    color: #000000;
+    text-decoration: none;
+
+}
+
+section a:hover {
+    text-decoration: underline;
+}
+
+section h3 {
+    text-align: center;
+    font-size: 14px;
+}
+
+section h2 {
+    grid-column:  1/-1;
+    text-align: center;
+    font-weight: normal;
 }
 
 /* フッター */
 footer {
     grid-row: foot;
+    justify-self: center;
+    align-self: center;
+    font-size: 13px;
+}
+
+body::after {
+    content: "";
+    background-color: #eeeeee;
+    grid-column: 1 / -1;
+    grid-row: foot;
+    z-index: -1;
 }
 
 
